# Flower-shop-django

./: .gitignore  README.md  pyproject.toml
flower_shop/flower_shop/: settings.py  urls.py
flower_shop/landing/: admin.py  models.py  urls.py  views.py
flower_shop/landing/migrations/: 0001_initial.py  0002_alter_bb_options_alter_bb_content_alter_bb_price_and_more.py  0003_rubric_bb_rubric.py  0004_bb_image.py
flower_shop/landing/static/: style.css
flower_shop/landing/static/css/: style.min.css
flower_shop/landing/static/js/: slick.min.js
flower_shop/landing/templates/landing/: base.html  by_rubric.html  create.html  footer.html  goods.html  header.html  index.html
flower_shop/landing/templates/layout/: basic.html
flower_shop/templates/: base.html
static/css/: style.min.css
